[package]
name = "jail_exporter"
version = "0.17.0"
description = "Prometheus exporter for FreeBSD jails."
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/phyber/jail_exporter"
repository = "https://github.com/phyber/jail_exporter.git"
rust-version = "1.80.1"
resolver = "2"
authors = [
    "David O'Rourke <david.orourke@gmail.com>",
]
keywords = [
    "exporter",
    "freebsd",
    "jail",
    "metrics",
    "prometheus",
]
exclude = [
    ".cirrus.yml",
    ".editorconfig",
    ".gitignore",
    ".rustfmt.toml",
    "Makefile",
    "grafana/jail_exporter.json",
    "man/jail_exporter.8",
    "rc.d/jail_exporter",
]

[profile.release]
lto = true

[features]
default = [
    "auth",
    "bcrypt_cmd",
    "rc_script",
]

# Enables HTTP basic authentication
auth = [
    "base64",
    "bcrypt",
    "serde",
    "serde_yaml",
]

# Provides a bcrypt subcommand to assist with hashing passwords for
# authentication
bcrypt_cmd = [
    "bcrypt",
    "dialoguer",
    "rand",
]

# Adds a CLI option to dump out an rc(8) script, useful for users who install
# via `cargo install`.
rc_script = []

[dependencies]
jail = "0.3.0"
parking_lot = "0.12"
prometheus-client = "0.22"
rctl = "0.3.0"
sysctl = "0.6"
tempfile = "3.8.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.askama]
version = "0.12"
default-features = false

[dependencies.axum]
version = "0.7.2"
default-features = false
features = [
    "http1",
    "tokio",
    "tower-log",
    "tracing",
]

[dependencies.base64]
version = "0.22"
default-features = false
optional = true

[dependencies.bcrypt]
version = "0.15.0"
optional = true

[dependencies.clap]
version = "4.4.0"
default-features = false
features = [
    "cargo",
    "env",
    "std",
    "wrap_help",
]

[dependencies.dialoguer]
version = "0.11.0"
default-features = false
optional = true
features = [
    "password",
]

[dependencies.rand]
version = "0.8"
optional = true

[dependencies.serde]
version = "1.0"
optional = true
features = [
    "derive",
]

[dependencies.serde_yaml]
version = "0.9"
optional = true

[dependencies.tokio]
version = "1.32"
features = [
    "macros",
    "rt-multi-thread",
]

# Features of this crate are selected in the features section above.
[dependencies.tower-http]
version = "0.6"
features = [
    "trace",
]

[dependencies.uzers]
version = "0.12"
default-features = false
features = [
    "cache",
]

[build-dependencies]
rustc_version = "0.4"

# Used by cargo test
[dev-dependencies]
indoc = "2.0"
once_cell = "1.18.0"
pretty_assertions = "1.4.0"

[dev-dependencies.tower]
version = "0.5"
features = [
    "util",
]

[dev-dependencies.uzers]
version = "0.12"
default-features = false
features = [
    "mock",
]
