[package]
name = "jail_exporter"
version = "0.17.0"
description = "Prometheus exporter for FreeBSD jails."
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/phyber/jail_exporter"
repository = "https://github.com/phyber/jail_exporter.git"
rust-version = "1.85.1"
resolver = "2"
authors = [
    "David O'Rourke <david.orourke@gmail.com>",
]
keywords = [
    "exporter",
    "freebsd",
    "jail",
    "metrics",
    "prometheus",
]
exclude = [
    ".cirrus.yml",
    ".editorconfig",
    ".gitignore",
    ".rustfmt.toml",
    "Makefile",
    "grafana/jail_exporter.json",
    "man/jail_exporter.8",
    "rc.d/jail_exporter",
]

[profile.release]
lto = true

[features]
default = [
    "auth",
    "bcrypt_cmd",
    "rc_script",
]

# Enables HTTP basic authentication
auth = [
    "dep:base64",
    "dep:bcrypt",
    "dep:serde",
    "dep:serde_yaml",
]

# Provides a bcrypt subcommand to assist with hashing passwords for
# authentication
bcrypt_cmd = [
    "dep:bcrypt",
    "dep:dialoguer",
    "dep:rand",
]

# Adds a CLI option to dump out an rc(8) script, useful for users who install
# via `cargo install`.
rc_script = []

[dependencies]
jail = "0.3.1"
parking_lot = "0.12"
prometheus-client = "0.24"
rctl = "0.4.0"
sysctl = "0.7"
tempfile = "3.23.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3.20"

[dependencies.askama]
version = "0.14"
default-features = false
features = [
    "alloc",
    "derive",
]

[dependencies.axum]
version = "0.8.6"
default-features = false
features = [
    "http1",
    "tokio",
    "tower-log",
    "tracing",
]

[dependencies.base64]
version = "0.22"
default-features = false
optional = true

[dependencies.bcrypt]
version = "0.17.1"
optional = true

[dependencies.clap]
version = "4.5.48"
default-features = false
features = [
    "cargo",
    "env",
    "std",
    "wrap_help",
]

[dependencies.dialoguer]
version = "0.12.0"
default-features = false
optional = true
features = [
    "password",
]

[dependencies.rand]
version = "0.9"
optional = true

[dependencies.serde]
version = "1.0"
optional = true
features = [
    "derive",
]

[dependencies.serde_yaml]
version = "0.9"
optional = true

[dependencies.tokio]
version = "1.47"
features = [
    "macros",
    "rt-multi-thread",
]

# Features of this crate are selected in the features section above.
[dependencies.tower-http]
version = "0.6"
features = [
    "trace",
]

[dependencies.uzers]
version = "0.12"
default-features = false
features = [
    "cache",
]

[build-dependencies]
rustc_version = "0.4"

# Used by cargo test
[dev-dependencies]
indoc = "2.0"
once_cell = "1.21.3"
pretty_assertions = "1.4.1"

[dev-dependencies.tower]
version = "0.5"
features = [
    "util",
]

[dev-dependencies.uzers]
version = "0.12"
default-features = false
features = [
    "mock",
]
